@@ -162,7 +162,7 @@ public:
 
   template <typename BODY>
   static inline
-  void ParallelForCondition(const Bool condition, UnsignedInteger from, UnsignedInteger to, const BODY & body, std::size_t gs = 1)
+  void ParallelForIf(const Bool condition, UnsignedInteger from, UnsignedInteger to, const BODY & body, std::size_t gs = 1)
   {
     if (condition)
       ParallelFor(from, to, body, gs);
@@ -179,6 +179,16 @@ public:
     {
       tbb::parallel_reduce(tbb::blocked_range<UnsignedInteger>(from, to, gs), body);
     });
+  }
+
+  template <typename BODY>
+  static inline
+  void ParallelReduceIf(const Bool condition, UnsignedInteger from, UnsignedInteger to, BODY & body, std::size_t gs = 1)
+  {
+    if (condition)
+      ParallelReduce(from, to, body, gs);
+    else
+      body(tbb::blocked_range<UnsignedInteger>(from, to, gs));
   }
 
   template <typename ITERATOR>
