@@ -712,6 +712,7 @@ ot_pyinstallcheck_test (FunctionalChaos_gsobol_sparse)
 ot_pyinstallcheck_test (FunctionalChaos_nd)
 ot_pyinstallcheck_test (FunctionalChaosSobolIndices_std)
 ot_pyinstallcheck_test (KrigingAlgorithm_std)
+ot_pyinstallcheck_test (KrigingAlgorithm_funcmodel IGNOREOUT)
 ot_pyinstallcheck_test (KrigingRandomVector_std)
 ot_pyinstallcheck_test (MetaModelValidation_std)
 ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std)
